--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 install.img filter=lfs diff=lfs merge=lfs -text
+initrd.img filter=lfs diff=lfs merge=lfs -text
+vmlinuz filter=lfs diff=lfs merge=lfs -text
